# koworker

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  ROADMAP.md  biome.json  components.json  db.sqlite  knip.json  lefthook.yml  opencode.json  package.json  tsconfig.json
.github/workflows/: ci.yml
.tanstack/tmp/: 72317361-737e86373d271c48a7ac8732736b7de3
docs/: ANALISE-ESTRUTURA.md  PRD-MIGRACAO-UI-WORKOPILOT.md  TERMINAL.md  portais-tema.md  skills.md
docs/desktop/: README.md  provedores.md  terminal.md
scripts/: migrate-v1.ts  seed-skill-categories.ts  seed.ts  setup.ts
scripts/desktop/: build-backend.ts  build-web.ts  deploy.ts  hot-deploy.ts  inject-prod-index.ts  inject-prod-sw.ts  install-sharp-vendor.ts  remote-redeploy.ts  update-and-build.sh
src/: client.ts  index.css  index.html  main.tsx  routeTree.gen.ts  server.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: autostart.rs  backend.rs  commands.rs  ipc.rs  lib.rs  main.rs  pty.rs  shortcut.rs  terminal.rs  tmux.rs  tray.rs  window.rs
src/api/: AGENTS.md  app.ts  arktype.ts  router.ts
src/cli/: AGENTS.md  args.ts  db.ts  index.ts  notify.ts  resolve.ts
src/components/: AGENTS.md  asset-viewer.tsx  doc-editor-pane.tsx  doc-entity-context-menu.tsx  doc-mobile-actions-drawer.tsx  doc-session-switcher.tsx  doc-share-controls.tsx  doc-toolbar.tsx  error-boundary.tsx  file-context-menu.tsx  invoke-defaults-control.tsx  markdown-doc.tsx  markdown-live-preview.ts  prompt-input.tsx  typography.tsx
static/: manifest.webmanifest  sw.js  version.json
v1_taskId_page/: $taskId.tsx
(+593 files in other folders)
