[package]
name = "kowork"
version = "0.1.0"
description = "Kowork - Tauri wrapper"
authors = ["pedrinhopagan"]
edition = "2021"

[lib]
name = "kowork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
rfd = "0.16"
